<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sp" />

    <Button
        android:id="@+id/btn_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file" />

    <Button
        android:id="@+id/btn_sqlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite" />

    <Button
        android:id="@+id/btn_greendao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greendao" />

</LinearLayout>
